- Issue 297: Add tag name to WebUrl
- Issue 225: Meta refresh does not work correctly ?
- Issue 298: Fatal Transport Error when crawling robots.txt
- Issue 303: Create a log configuration file default
- Issue 174: crawler4j should support crawling all https page
- Issue 302: Update deprecated methods/classes in PageFetcher
- Issue 304: Crawl Site Maps

BugFixes
- Issue 284: Cathing any exception and hidding the log. Upgraded logging in webcrawler Clarified a little statuscode 1005 
- Issue 251: Fix a typo, Fix a typo in line #92. 'cuncurrent' -> 'concurrent' 
- Issue 279: TikaException is thrown while crawling several PDFs in a row The problem was the wrong re-use of the metadata 
- Issue 139: A URL with a backslash was rejected 
- Issue 231: Memory leakage in crawler4j caused by database environment, Closing the environment solves the leak. 
- Issue 206: StringIndexOutOfBoundsException in WebURL 
- Issue 285: WebURL.java causes IndexOutOfBoundException 
- Issue 131: Internal error in WebURL
- Issue 296: Threads not being killed in graceful shutdown
- Issue 299: NullPointerException when trying to crawl different URLs

Version 3.5 (March 2013)
- Fixed issues #184, #169, #136, #156, #191, #192, #127 
- Fixed  issue #101  in normalizing Urls 
- Fixed  issue #143 : Anchor text is now provided correctly 
- Access to response headers is now provided as a field in Page object 
- Added support for handling content fetch and parsing issues. 
- Added meta refresh and location to outgoing links 
- Upgraded to Java 7 
- Updated dependencies to their latest versions 

Version 3.3
- Updated URL canonicalizer based on RFC1808 and fixed bugs 
- Added Parent Url and Path to WebURL 
- Added support for domain and sub-domain detection. 
- Added support for handling http status codes for fetched pages 

Version 3.1
- Fixed thread-safety bug in page fetcher. 
- Improved URL canonicalizer. 

Version 3.0
- Major re-design of crawler4j to add many new features and make it extendable. 